<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/colorGrey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/padding_16">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    android:text="@string/first_name"
                    android:textColor="@color/colorWhite" />

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:background="@drawable/editext_background"
                    android:inputType="textPersonName"
                    android:padding="@dimen/padding_16" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    android:text="@string/last_name"
                    android:textColor="@color/colorWhite" />

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:background="@drawable/editext_background"
                    android:inputType="textPersonName"
                    android:padding="@dimen/padding_16" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    android:text="@string/date_of_birth"
                    android:textColor="@color/colorWhite" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dateofbirth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:background="@drawable/editext_background"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:padding="@dimen/padding_16" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    android:text="@string/mobile_number"
                    android:textColor="@color/colorWhite" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:orientation="horizontal">

                    <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                        android:id="@+id/countryCodePicker"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/margin_8"
                        android:layout_weight="0.3"
                        android:gravity="center"
                        app:ccp_hideNameCode="true"
                        app:ccp_keyboardAutoPopOnSearch="false" />


                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_8"
                        android:layout_weight="1"
                        android:background="@drawable/editext_background"
                        android:inputType="phone"
                        android:padding="@dimen/padding_16" />

                </LinearLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    android:text="@string/address"
                    android:textColor="@color/colorWhite" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:background="@drawable/editext_background"
                    android:gravity="top"
                    android:inputType="textMultiLine|textPostalAddress"
                    android:lines="4"
                    android:padding="@dimen/padding_16" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    android:text="@string/city"
                    android:textColor="@color/colorWhite" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:background="@drawable/editext_background"
                    android:gravity="top"
                    android:inputType="textPostalAddress"
                    android:padding="@dimen/padding_16" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    android:text="@string/state"
                    android:textColor="@color/colorWhite" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:background="@drawable/editext_background"
                    android:gravity="top"
                    android:inputType="textPostalAddress"
                    android:padding="@dimen/padding_16" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    android:text="@string/pincode"
                    android:textColor="@color/colorWhite" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pincode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:background="@drawable/editext_background"
                    android:inputType="number"
                    android:padding="@dimen/padding_16" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_profile_information"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    android:layout_marginBottom="@dimen/margin_16"
                    android:padding="@dimen/padding_8"
                    android:text="@string/add"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/textsize_24"
                    app:rippleColor="@color/colorPink" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>