<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorTransparentDark">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/margin_16"
            android:background="@drawable/popup_background"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_8"
                    android:text="@string/pick_an_image"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/textsize_24"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@null"
                    android:padding="@dimen/padding_16"
                    app:srcCompat="@drawable/ic_close" />
            </RelativeLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:gravity="center"
                android:padding="@dimen/padding_8"
                android:text="@string/camera"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textsize_20" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorPrimaryDark" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/Gallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/padding_8"
                android:text="@string/gallery"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textsize_20" />
        </LinearLayout>
    </RelativeLayout>
</layout>